change transaction image displaying and change all currency format

--- a/src/components/TransactionItem/TransactionItem.module.css
+++ b/src/components/TransactionItem/TransactionItem.module.css
@@ -1,7 +1,25 @@
 .productImage {
-  width: 100px;
+  width: 100%;
 }
 
 .cardTransaction:hover {
   cursor: pointer;
+}
+
+.transactionImageField {
+  width: 100px;
+  height: 100px;
+}
+
+.columns {
+  padding: 0;
+  margin: 0;
+}
+
+.halfHeight {
+  height: 50px;
+}
+
+.fullHeight {
+  height: 100%;
 }
