implementation of array on history transaction

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -64,3 +64,25 @@ body::-webkit-scrollbar-thumb {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+
+.max-line-1 {
+  -webkit-line-clamp: 1; /* number of lines to show */
+  line-clamp: 1;
+}
+
+.max-line-2 {
+  -webkit-line-clamp: 2; /* number of lines to show */
+  line-clamp: 2;
+}
+
+.max-line-3 {
+  -webkit-line-clamp: 3; /* number of lines to show */
+  line-clamp: 3;
+}
