Update For Production

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -115,3 +115,10 @@ body::-webkit-scrollbar-thumb {
 .w-80 {
   width: 80%;
 }
+
+.previewImageCard {
+  width: 250px;
+  height: 125px;
+  background-color: darkgrey;
+  border-radius: 10px;
+}
